# trading-utils

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  9sig_kelly.py  LICENSE  Makefile  Options_Analysis.md  README.md  REPORTS.md  TODO.md  add-comments.md  analyze_spy_september_returns.py  back-trader-tutorial.py  backtest-scale-in-out.py  bs-options-price-calculator.py  bt_ma_scale_in_strategy.py  bt_rsi_scale_in_strategy.py  bt_rsi_vix_spy_strategy.py  bt_simple_beta_baller_strategy.py  bt_sma_scale_in_strategy.py  bt_spy_pct_change_strategy.py  bt_trailing_atr_strategy.py  bt_vix_term_structure_strategy.py  cage-fight-animation.py  cage-fight.py  calendar-scanner.py  calendar-spread-analysis.py  calendar-spread-payoff-diagram.py  calendar_spread_interactive.py  cl-futures-analysis.py  cl-options-strategy-suggester.py  combine-all-csvs.py  compare_stocks.py  compare_stocks_relative_strength.py  composer-csv-processor.py  consecutive-losses.py  credit_market_canary.py  crypto_ma_trade_bot.py  crypto_mma_trade_bot.py  (+132 more)
assets/: TradingUtils.drawio
common/: __init__.py  analyst.py  backtest_analysis.py  backtest_framework.py  bot_wrapper.py  candle_pattern.py  environment.py  exchange.py  external_charts.py  filesystem.py  ib.py  logger.py  market.py  market_data.py  options.py  options_analysis.py  plotting.py  reporting.py  steps.py  steps_runner.py  subprocess_runner.py  symbols.py  tele_notifier.py  trading_hours.py  twitter_api.py
composer-trades/: simple_beta_baller_signal.py
docs/: TradingUtils.drawio
ideas/: mean-reversion.md
plans/: failed_scripts_analysis.md  files_with_main_block.txt
(+137 files in other folders)
