[project]
name = "trading-utils"
version = "0.1.0"
description = "A collection of trading utilities and backtesting strategies for stocks, options, and cryptocurrency trading analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "finta",
    "pandas",
    "yfinance",
    "numpy",
    "jinja2",
    "persistent-cache>=0.0.2",
]

[dependency-groups]
dev = [
    "black",
    "bpython",
    "pre-commit",
]
